--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=3000
 JWT_SECRET=HuY3QFhN5GtAycRmc4sbf1gPjrEH2J67
-DB_CONNECTION=mongodb+srv://rawatadii060:yDuEBbm5Ah20hjNt@cluster0.0yiiy.mongodb.net/BillFlow
+DB_CONNECTION=mongodb+srv://rawatadii060:22June2004*@cluster0.0yiiy.mongodb.net/BillFlow
